--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ html:
 sphinx:
   config:
     language: it
+    html_show_copyright: false
     html_theme_options:
       logo:
         image_light: logo.svg
