--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ html:
 # sphinx extensions
 sphinx:
   config:
-    language: it
+    language: en
     html_js_files:
     - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js
     - https://cdn.jsdelivr.net/npm/loading-attribute-polyfill@2.1.0/dist/loading-attribute-polyfill.min.js
